@startuml

title __DOMOTIX > MODEL > UTIL's Class Diagram__\n

namespace src.domotix.model {
    namespace util {
        class src.domotix.model.util.Costanti {
            {static} + PERCORSO_CARTELLA_LIBRERIA : String
            {static} + PERCORSO_CARTELLA_LIBRERIA_IMPORTATA : String
            {static} + NOME_CARTELLA_CATEGORIE_SENSORI : String
            {static} + NOME_CARTELLA_CATEGORIE_ATTUATORI : String
            {static} + NOME_CARTELLA_UNITA_IMMOB : String
            {static} + NOME_CARTELLA_SENSORI : String
            {static} + NOME_CARTELLA_ATTUATORI : String
            {static} + NOME_CARTELLA_AZIONI_PROGRAMMATE : String
        }

        note bottom of Costanti
            Le costanti riguardanti i percorsi delle cartelle
            sono state ristrutturate in modo da consentire
            alla classe PercorsiFile la costruzione completa
            sulle tre basi a disposizione: PERCORSO_CARTELLA_DATI,
            PERCORSO_CARTELLA_LIBRERIA, PERCORSO_CARTELLA_LIBRERIA_IMPORTATA.
            In questo senso, le costanti qui riportate come "nomi cartelle"
            sostituiscono le precedenti "percorsi cartella".
        end note

        class src.domotix.model.util.ElencoDispositivi {
        }

        interface src.domotix.model.util.ObservableList {
        }

        interface src.domotix.model.util.ObserverList {
        }

        class src.domotix.model.util.SommarioDispositivi {
        }
    }

    namespace bean {
        namespace device {
            abstract class Dispositivo {
            }
        }
    }
}



src.domotix.model.util.ElencoDispositivi ..|> src.domotix.model.util.ObservableList
src.domotix.model.util.SommarioDispositivi ..|> src.domotix.model.util.ObserverList
src.domotix.model.util.ElencoDispositivi "*" o--> "1" src.domotix.model.bean.device.Dispositivo : elenco
src.domotix.model.util.SommarioDispositivi "*" o--> "1" src.domotix.model.bean.device.Dispositivo : elenco

@enduml
